# maazdb-cli

./: .gitignore  Cargo.toml  README.md  build.rs  com.md
images/: icon.rc  maazdb.icns
src/: config.rs  connection.rs  main.rs  monitor.rs
