[package]
name = "maazdb-cli"
version = "13.4.1"
edition = "2021"
authors = ["Maaz Waheed"]
description = "Command Line Interface and Monitor for MaazDB"

[dependencies]
maazdb-rs = "0.1.0"
comfy-table = "7.1"
colored = "3.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.29.0"
sysinfo = "0.38.4"
dirs = "6.0.0"

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.2"
winapi = { version = "0.3", features = ["consoleapi", "processenv", "winbase", "wincon"] }

[build-dependencies]
embed-resource = "3.0.9"
